Correction de la marge des éléments Collapse

--- a/src/Style/Logement.css
+++ b/src/Style/Logement.css
@@ -163,5 +163,6 @@
 .collapse_logement{
     display: flex;
     width: 100%;
+    margin-bottom: 20px;
 }
 }
